# PKASPEC

./: CMakeLists.txt  NeutronW_Main.cpp  README.md
BCALIB/ANALYSIS/: CMakeLists.txt
BCALIB/ANALYSIS_GPU/: CMakeLists.txt
BCALIB/APPLICATIONS/: CMakeLists.txt
BCALIB/Common/: CMakeLists.txt
BCALIB/CommonGPU/: CMakeLists.txt
BCALIB/src/include/Common/: NWActionInitialization.h  NWAnalysis.h  NWAnalysis_New.h  NWBeam.h  NWEventAction.h  NWGeometry.h  NWGlobal.h  NWInfoStore.h  NWMaterials.h  NWPrimaryGeneratorAction.h  NWReadInfoStore.h  NWRunAction.h  NWRunInfoStore.h  NWSimParameters.h  NWStackingAction.h  NWSteppingAction_InletEst.h  NWSteppingAction_InletEstAndInEst.h  NWSteppingAction_InletEstAndInEstTillEnd.h  NWSteppingAction_InletToFirstInEst.h  NWSteppingAction_InletToFirstNonEst.h  NWSteppingAction_InletToLastEst.h  NWSteppingAction_Iso.h  NWSteppingAction_MatrixAtoms.h  NWTrackingAction.h  NWVAuxiliaryTrackInformation.h  SimRecordFrame.h
BCALIB/src/include/CommonGPU/: NWAnalysis_GPU.cuh
BCALIB/src/source/ANALYSIS/: NeutronW_Analysis.cpp  New_NeutronW_Analysis.cpp
BCALIB/src/source/ANALYSIS_GPU/: New_NeutronW_Analysis_GPU.cu
BCALIB/src/source/APPLICATIONS/: NeutronW_Simulation.cpp
BCALIB/src/source/Common/: NWActionInitialization.cpp  NWAnalysis.cpp  NWAnalysis_New.cpp  NWBeam.cpp  NWEventAction.cpp  NWGeometry.cpp  NWGlobal.cpp  NWInfoStore.cpp  NWMaterials.cpp  NWPrimaryGeneratorAction.cpp  NWReadInfoStore.cpp  NWRunAction.cpp  NWRunInfoStore.cpp  NWSimParameters.cpp  NWSteppingAction.cpp  NWSteppingAction_InletEst.cpp  NWSteppingAction_InletEstAndInEst.cpp  NWSteppingAction_InletEstAndInEstTillEnd.cpp  NWSteppingAction_InletToFirstInEst.cpp  NWSteppingAction_InletToFirstNonEst.cpp  NWSteppingAction_InletToLastEst.cpp  NWSteppingAction_Iso.cpp  NWSteppingAction_MatrixAtoms.cpp  NWTrackingAction.cpp  NWVAuxiliaryTrackInformation.cpp  SimRecordFrame.cpp
BCALIB/src/source/CommonGPU/: 111.cu  NWAnalysis_GPU.cu
LIB/MiniUtilities/: CMakeLists.txt
LIB/src/include/MiniUtilities/: EXNUMB.h  GETINPUTSTRLINE.h
LIB/src/source/MiniUtilities/: EXNUMB.cpp  GETINPUTSTRLINE.cpp
Sample/: BCAPKA.in
include/: NWAnalysis.h  NWGlobal.h  NWInfoStore.h  NWPrimaryGeneratorAction.h  NWSimParameters.h  NWSteppingAction.h  SimRecordFrame.h
src/: NWActionInitialization.cpp  NWAnalysis.cpp  NWGeometry.cpp  NWGlobal.cpp  NWInfoStore.cpp  NWPrimaryGeneratorAction.cpp  NWRunAction.cpp  NWSimParameters.cpp  NWStackingAction.cpp  NWSteppingAction.cpp  NWTrackingAction.cpp
